# research-digest-mailer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
config/: topics.toml
launchd/: com.local.research-digest.plist
src/research_digest/: __init__.py  cli.py  config.py  crossref.py  email_render.py  enrichment.py  mailer.py  state.py
tests/: test_crossref.py  test_enrichment.py  test_mailer.py  test_render.py  test_state.py
